# agentic-patterns

./: .env.example  .gitignore  AGENTIC_DESIGN_PATTERNS.md  CLAUDE.md  README.md  main.py  pyproject.toml
docs/: CODE_SAMPLES.md  RUNNING_PATTERNS.md
scripts/: test_langchain.py  test_setup.py
src/agentic_patterns/common/: __init__.py  config.py  model_factory.py  output_writer.py
src/agentic_patterns/patterns/chaining_01/: __init__.py  config.py  run.py
src/agentic_patterns/patterns/learn_adapt_09/: __init__.py  config.py  run.py
src/agentic_patterns/patterns/memory_mgmt_08/: __init__.py  config.py  run.py
src/agentic_patterns/patterns/multi_agent_collab_07/: __init__.py  config.py  run.py
src/agentic_patterns/patterns/parallelization_03/: __init__.py  config.py  run.py
src/agentic_patterns/patterns/planning_06/: __init__.py  config.py  run.py
src/agentic_patterns/patterns/reflection_04/: __init__.py  config.py  run.py
src/agentic_patterns/patterns/routing_02/: __init__.py  config.py  run.py
src/agentic_patterns/patterns/set_goal_monitor_10/: __init__.py  config.py  run.py
src/agentic_patterns/patterns/tool_use_05/: __init__.py  config.py  run.py
